@@ -863,7 +863,7 @@ LangChain4J documentation.<br />
 </div>
 <br />
 <table>
-<tbody><tr><th>Provider Type/Nickname</th><th>Required Methods</th></tr>
+<tbody><tr><th>LLM Type/Nickname</th><th>Required Methods</th></tr>
 <tr><td>OLLAMA</td><td>LANGCHAIN4J_BASEURL, LANGCHAIN4J_MODELNAME</td></tr>
 <tr><td>ANTHROPIC</td><td>LANGCHAIN4J_APIKEY</td></tr>
 <tr><td>AZURE</td><td>LANGCHAIN4J_ENDPOINT, LANGCHAIN4J_APIKEY, LANGCHAIN4J_DEPLOYMENTNAME</td></tr>
@@ -881,9 +881,9 @@ LangChain4J documentation.<br />
 <tr><td>QIANFAN</td><td>LANGCHAIN4J_APIKEY, LANGCHAIN4J_SECRETKEY</td></tr>
 <tr><td>CLOUDFLARE</td><td>LANGCHAIN4J_ACCOUNTID, LANGCHAIN4J_APITOKEN, LANGCHAIN4J_MODELNAME</td></tr>
 <tr><td>ZHIPUAI</td><td>LANGCHAIN4J_APIKEY</td></tr>
-<tr><td>BEDROCK_ANTHROPIC</td><td></td></tr>
-<tr><td>BEDROCK_COHERE</td><td></td></tr>
-<tr><td>BEDROCK_LLAMA</td><td></td></tr>
+<tr><td>BEDROCK_ANTHROPIC</td><td>(uses AWS environment variables)</td></tr>
+<tr><td>BEDROCK_COHERE</td><td>(uses AWS environment variables)</td></tr>
+<tr><td>BEDROCK_LLAMA</td><td>(uses AWS environment variables)</td></tr>
 <tr><td>COHERE</td><td>LANGCHAIN4J_APIKEY</td></tr>
 <tr><td>DEEPINFRA</td><td>LANGCHAIN4J_APIKEY</td></tr>
 <tr><td>GROQ</td><td>LANGCHAIN4J_APIKEY</td></tr>
