@@ -420,11 +420,12 @@ The Plane Name is case sensitive and must match an entry in planesofexistence.tx
 IMMUNITIES=\
 Ability    : Immunities\n\r\
 Parameters : [LIST OF IMMUNITIES]\n\r\
-Example    : FIRE GAS JUSTICE\n\r\
+Example    : FIRE GAS JUSTICE SPELL_FEAR\n\r\
 Description: \n\r\
 Creates immunities to certain attacks in a mob.  Immunities include: ALL \
 ACID, WATER, COLD, DEATH, DISEASE, ELECTRIC, FIRE, GAS, JUSTICE, MIND, \
-PARALYZE, POISON, UNDEAD, LEGAL.  List is space delimited. See also Prop_WeaponImmunity.
+PARALYZE, POISON, UNDEAD, LEGAL, an ability ID, or a behavior ID.  List \
+is space delimited. See also Prop_WeaponImmunity.
 
 EXTRADATA=\
 Ability    : ExtraData\n\r\
