@@ -3064,7 +3064,8 @@ Parameters : Ability ID/Start time in millis;etc..\n\r\
 Example    : Disease_Cold/12312312323;Spell_Fireball/123123132\n\r\
 Description: \n\r\
 This is used by diseases primarily to provide a mob or player with \
-temporary (30 mud hour) immunity to a set of diseases.
+temporary (30 mud hour) immunity to a set of diseases, but you can \
+also include other ability ids or behavior ids on the list as well.
 
 TRIGGEREDAFFECTS=\
 Property   : TriggeredAffects\n\r\
